@@ -1,3 +1,7 @@
+2012-08-24  Christer Nyfält  <cjnyfalt@yahoo.co.uk>
+
+	* Added electronics listing.
+
 2012-08-23  Christer Nyfält  <cjnyfalt@yahoo.co.uk>
 
 	* Added -light, -medium, -heavy, and -assault filters.
